assets/css/style.css
/* Set global variables for color scheme and header fonts */
:root {
    --banner-header-color: rgb(49 52 61);
    --banner-inset-color: rgb(145 203 205);
    --title-color: rgb(42 52 76);
    --h1: 30px;
    --h2: 28px;
    --h3: 18px;
}

/* Disallows user from selecting text */
.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Old versions of Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently
                        supported by Chrome, Edge, Opera and Firefox */
  }

/* Reset CSS and set main body formatting*/
html {
    min-width: 375px;
}

*, *::before, *::after {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
    font: inherit;
}

img, picture, svg, video {
    display: block;
    max-width: 100%;
}

a {
    text-decoration: none;
    font-weight: bold;
    color: rgb(13, 161, 206);
}

body {
    background-color: rgb(238 238 246);
    color: rgb(42 52 76);
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    font-size: 14px;
}

/* Create a header with left justified title and a formatted ul nav-menu */
header {
    width: 100%;
    height: 80px;
    background-color: var(--banner-header-color);
    position: sticky;
    top: 0;
    z-index: 2;
}

.header-title {
    width: 300px;
    height: 40px;
    background-color: var(--banner-inset-color);
    color: var(--title-color);
    display: inline;
    float: left;
    margin-top: 15px;
    padding: 3px 0px 0px 20px;
    font-size: var(--h1);
}

.site-nav-menu {
    width: auto;
    height: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: end;
    list-style-type: none;
    margin-right: 20px;
}

.site-nav-link {
    width: fit-content;
    margin-right: 10px;
    height: 25px;
    border-bottom: 3px solid var(--banner-inset-color);
    text-align: center;
    margin-top: 35px;
    padding: 0 10px;
    position: relative;
    color: var(--banner-inset-color);
}

/* Hovering over the li items (buttons) in the site nave menu
turns text white and adds a white bottom border pseudo element */
.site-nav-link:hover,
.site-nav-link:active {
    color: white;
}

.site-nav-link:hover::after,
.site-nav-link:active::after
{
    width: 100%;
    content: " ";
    position: absolute;
    left: 0px;
    bottom: 0px;
    border: 1px solid white;
}

/* .site-nav-item:active::after {
    border: 1px solid rgb(14, 0, 207);
} */

/* Hero banner CSS */
.hero {
    display: block;
    width: 100%;
    height: 200px;
    background-image: url(https://media.discordapp.net/attachments/989718721465569330/1053516551438999643/image.png?width=1149&height=525);
    background-size: cover;
    background-repeat: no-repeat;
    background-position-y: -80px;
    transition: background-position-y .5s ease-out;
    position: relative;
}

.hero-title {
    width: 300px;
    height: 40px;
    background-color: var(--banner-inset-color);
    position: absolute;
    bottom: 30px;
    right: 30px;
    padding-top: 10px;
    font-weight: bolder;
    text-align: center;
}

/* Setting main to flex to create a column of section cards */
main {
    margin-top: 20px;
    display: flex;
    flex-direction: column;
}

/* Section cards are composed of two sections - title (30% width) and content (70% width)
Flex direction changed to column for @media queries < 480 pixels */
.section-card {
    height: fit-content;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    margin-bottom: 30px;
}

.section-title {
    min-height: fit-content;
    width: 30%;
    min-width: 200px;
    border-right: 3px solid var(--title-color);
    text-align: right;
    padding-right: 10px;
    font-size: var(--h2);
    font-weight: bold;
}

/* Hidden alternate section card titles that will display inline for @media
queries <= 480 pixels */
.p-text {
    display: none;
}

.section-content{
    width: 70%;
    height: fit-content;
    padding: 20px 20px;
}

/* Initial grid template for work card divs */
#work-cards {
    display: grid;
    grid-template:
                "work-card-1 work-card-1" 300px
                "work-card-2 work-card-3" 100px
                "work-card-4 work-card-5" 100px
                ;
    gap: 10px;
}

.work-card {
    border: 4px solid var(--banner-inset-color);
    border-radius: 2px;
    position: relative;
    overflow: hidden;
}

.work-card-title {
    position: absolute;
    left: 0;
    bottom: 10px;
    width: fit-content;
    height: fit-content;
    background-color: var(--banner-inset-color);
    color: white;
    padding: 0px 5px 3px 10px;
}

/* Default to 90% opacity for hazy appearance, 100% opacity when active or hovered */
.work-card-img {
    width: 100%;
    height: 100%;
    opacity: .8;
    transition: opacity .5s cubic-bezier(0.34, 1.56, 0.64, 1), transform 4s ease-in, background-position-y .3s ease-out;
    background-size: cover;
    background-repeat: no-repeat;
}

/* #test {
    opacity: .8;
}

#test:hover,
#test:active {
    opacity: 1;
} */

.work-card:hover .work-card-img,
.work-card:active .work-card-img {
    opacity: 1;
    transform: translateY(-30px);
    transform: scale(1.4);
}

.work-card h3 {
    font-size: var(--h3);
}

.work-card p {
    font-size: 12px;
    font-style: italic;;
}

.open-in-new-icon {
    width: 25px;
    height: 25px;
    position: absolute;
    top: 15px;
    right: 15px;
    background-color: teal;
    transition: all .2s ease-in-out;
    border-radius: 3px;
    box-shadow: 2px 2px 5px 0px rgba(255, 255, 255, 1);
}

.open-in-new-icon:hover,
.open-in-new-icon:active {
    transform: scale(1.2);
    box-shadow: 1px 1px 8px 0px rgba(255, 255, 255, .6);
}
/* ... */

